--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@
   font-size: 22px;
   color: #fff;
   font-weight: 500;
+  margin-right: 10px;
 }
 #es-essentia.es-essentia .es-dosage__title {
   font-weight: 500;
