move "es-info" section to the bottom

--- a/style.css
+++ b/style.css
@@ -314,6 +314,7 @@
     cursor: pointer;
     color: #fff;
     padding: 12px;
+    margin-top: 18px;
 }
 #es-essentia.es-essentia .es-info__mainTitle {
   font-weight: 500;
