--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
 @font-face {
-  font-family: "ITCAvantGardeStd";
-  src: url("fonts/ITCAvantGardeStd-Bk.otf");
+  font-family: 'ITCAvantGardeStd';
+  src: url('fonts/ITCAvantGardeStd-Bk.otf');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: "ITCAvantGardeStd";
-  src: url("fonts/ITCAvantGardeStd-Bold.otf");
+  font-family: 'ITCAvantGardeStd';
+  src: url('fonts/ITCAvantGardeStd-Bold.otf');
   font-weight: 600;
   font-style: normal;
 }
 
+body,
+html {
+  padding: 0;
+  margin: 0;
+}
 
 #es-essentia.es-essentia {
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.2;
@@ -77,6 +82,9 @@
   font-family: inherit;
   font-weight: inherit;
 }
+#es-essentia.es-essentia sup {
+  line-height: 0;
+}
 #es-essentia.es-essentia .es-kv {
   position: relative;
   margin-bottom: 100px;
@@ -85,7 +93,7 @@
 #es-essentia.es-essentia .es-kv__kv {
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #es-essentia.es-essentia .es-kv__kv--desktop {
   display: none;
@@ -164,7 +172,6 @@
   background: url(img/slide-bg.jpg);
   background-size: cover;
   min-height: 220px;
-  margin-bottom: 10px;
 }
 #es-essentia.es-essentia .es-support .swiper-wrapper {
   display: block;
@@ -216,7 +223,8 @@
 #es-essentia.es-essentia .es-support__icon--big {
   max-width: 87px;
 }
-#es-essentia.es-essentia .es-support__text, #es-essentia.es-essentia .es-support__desc {
+#es-essentia.es-essentia .es-support__text,
+#es-essentia.es-essentia .es-support__desc {
   color: #fff;
 }
 #es-essentia.es-essentia .es-support__desc {
@@ -247,7 +255,7 @@
 #es-essentia.es-essentia .es-video__videoCnt {
   width: 100%;
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 32px 0;
 }
 #es-essentia.es-essentia .es-video__iframe {
   width: 100%;
@@ -261,7 +269,7 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
-  margin: 50px 0;
+  margin-bottom: 32px;
 }
 #es-essentia.es-essentia .es-dosage__btn {
   display: flex;
@@ -317,7 +325,7 @@
   padding-left: 16px;
 }
 #es-essentia.es-essentia .es-dosage__desc::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 6px;
   left: 0;
@@ -328,14 +336,13 @@
 }
 #es-essentia.es-essentia .es-info__btn {
   background: url(img/dosage-bg-dt.jpg) 100% 100% no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    color: #fff;
-    padding: 12px;
-    margin-top: 18px;
+  background-size: cover;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  color: #fff;
+  padding: 12px;
 }
 #es-essentia.es-essentia .es-info__mainTitle {
   font-weight: 500;
@@ -389,13 +396,16 @@
 }
 #es-essentia.es-essentia .es-info__up {
   display: flex;
-  align-items: center;
   gap: 14px;
   padding: 14px;
-  padding-top: 0;
+}
+#es-essentia.es-essentia .es-info__image {
+  width: 50%;
 }
 #es-essentia.es-essentia .es-info__img {
-  max-width: calc(50% - 7px);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 #es-essentia.es-essentia .es-info__img--desktop {
   display: none;
@@ -403,12 +413,13 @@
 #es-essentia.es-essentia .es-info__desc {
   font-size: 14px;
   color: #506f13;
+  width: 50%;
+  align-self: center;
 }
 #es-essentia.es-essentia .es-info__down {
   background: url(img/slide-2-bg.jpg) 100% 100%;
   background-size: cover;
   padding: 20px 14px;
-  padding-bottom: 56px;
 }
 #es-essentia.es-essentia .es-info__down--doctor {
   text-align: center;
@@ -416,10 +427,11 @@
 #es-essentia.es-essentia .es-info__content {
   align-self: center;
   margin: 0 auto;
+  width: 50%;
 }
 #es-essentia.es-essentia .es-info__wrapper {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   gap: 14px;
   min-height: 240px;
 }
@@ -438,7 +450,9 @@
   text-align: center;
 }
 #es-essentia.es-essentia .es-info__asset {
-  max-width: calc(50% - 7px);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 #es-essentia.es-essentia .es-info__asset--desktop {
   display: none;
@@ -453,6 +467,7 @@
 #es-essentia.es-essentia .es-table__wrapper {
   overflow-x: scroll;
   padding-bottom: 15px;
+  margin-bottom: 18px;
 }
 #es-essentia.es-essentia .es-table__green--top {
   border-top: 5px solid #ccc926;
@@ -550,7 +565,8 @@
 #es-essentia.es-essentia .es-comp {
   background: url(img/comp-bg.jpg) 100% 100%;
   background-size: cover;
-  padding: 14px;
+  padding: 12px;
+  margin-bottom: 32px;
 }
 #es-essentia.es-essentia .es-comp__content--desktop {
   display: none;
@@ -576,7 +592,7 @@
 }
 #es-essentia.es-essentia .es-comp__title {
   font-size: 22px;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
   color: #fff;
   font-weight: 500;
 }
@@ -666,7 +682,7 @@
   #es-essentia.es-essentia .es-kv__kv--desktop {
     display: block;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     min-height: 550px;
   }
   #es-essentia.es-essentia .es-kv__title {
@@ -781,7 +797,6 @@
     display: flex;
   }
 
-  
   #es-essentia.es-essentia .es-dosage__title {
     font-size: 56px;
   }
@@ -811,7 +826,7 @@
   #es-essentia.es-essentia .es-dosage__img {
     max-width: none;
   }
- 
+
   #es-essentia.es-essentia .es-dosage__desc {
     font-size: 24px;
   }
@@ -819,11 +834,9 @@
     display: none;
   }
 
-
- #es-essentia.es-essentia .es-info__mainTitle {
-  font-size: 56px;
- }
-  
+  #es-essentia.es-essentia .es-info__mainTitle {
+    font-size: 56px;
+  }
 
   #es-essentia.es-essentia .es-info .swiper-button-next,
   #es-essentia.es-essentia .es-info .swiper-button-prev {
@@ -931,5 +944,4 @@
   #es-essentia.es-essentia .es-table__wrapper {
     overflow-x: hidden;
   }
-  
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
