--- a/style.css
+++ b/style.css
@@ -248,22 +248,19 @@
 }
 
 #es-essentia.es-essentia .es-video {
-  /* max-width: 960px; */
-  min-width: 320px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  padding: 32px 0;
 }
 #es-essentia.es-essentia .es-video__videoCnt {
   width: 100%;
   margin: 0 auto;
-  padding: 32px 0;
 }
 #es-essentia.es-essentia .es-video__iframe {
   width: 100%;
-  min-height: 450px;
-  z-index: 1;
+  aspect-ratio: 16/9;
 }
 
 #es-essentia.es-essentia .es-dosage {
